# saltext-proxmox

./: .codecov.yml  .copier-answers.yml  .coveragerc  .envrc  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  NOTICE.txt  README.md  noxfile.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  docs.md  feature_request.md  tech-debt.md
.github/actions/upload-exitstatus/: action.yml
.github/workflows/: ci.yml  deploy-docs-action.yml  deploy-package-action.yml  docs-action.yml  get-changed-files.yml  package-action.yml  pr.yml  pre-commit-action.yml  prepare-release-action.yml  push.yml  set-resolution-action.yml  tag-auto.yml  tag.yml  test-action.yml  test.yml
.pre-commit-hooks/: check-cli-examples.py  make-autodocs.py
changelog/: 12.added.md  20.fixed.md  21.changed.md  22.changed.md  25.fixed.md  27.removed.md  29.changed.md  45.fixed.md  49.fixed.md  8.removed.md  9.changed.md
docs/: all.rst  changelog.md  conf.py  index.rst
docs/_ext/: saltdomain.py
docs/ref/: modules.rst  saltext.proxmox.clouds.rst  saltext.proxmox.rst  saltext.rst
docs/ref/clouds/: all.rst  index.rst  saltext.proxmox.clouds.proxmox.rst
docs/topics/: configuration.md  index.rst  installation.md
src/saltext/proxmox/: loader.py  version.py
src/saltext/proxmox/clouds/: proxmox.py
tests/: conftest.py
tests/functional/: conftest.py
tests/integration/: conftest.py
tests/support/: mock.py
tests/unit/: conftest.py
tests/unit/clouds/: test_proxmox.py
tests/unit/utils/: test_proxmox.py
tests/utils/: names.py
tools/: initialize.py  version.py
tools/helpers/: cmd.py  copier.py  git.py  pre_commit.py  prompt.py  venv.py
