[metadata]
name = saltext.proxmox
description = Salt Extension Modules for Proxmox
long_description = file: README.md
long_description_content_type = text/markdown
author = EITR Technologies, LLC
author_email = devops@eitr.tech
keywords = salt-extension, salt, cloud, proxmox
url = https://github.com/salt-extensions/saltext-proxmox
project_urls =
    Source=https://github.com/salt-extensions/saltext-proxmox
    Tracker=https://github.com/salt-extensions/saltext-proxmox/issues
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
platforms = any

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.6
setup_requires =
  pyzmq==23.2.0
  setuptools>=58.3.0,<67.0.0
  setuptools-declarative-requirements
  wheel
install_requires =
  requests==2.2.1
  ipy==0.81

  # Add other module install requirements above this line

[options.packages.find]
where = src
exclude =
    tests

# When targetting Salt < 3003, you can remove the other 'options.entry_points' section and use this one
#[options.entry_points]
#salt.loader=
#
#  states_dirs = saltext.azurerm.loader:get_states_dirs
#
#  module_dirs = saltext.azurerm.loader:get_module_dirs
#
#  cloud_dirs = saltext.azurerm.loader:get_cloud_dirs
#
#  utils_dirs = saltext.azurerm.loader:get_utils_dirs
#

[options.entry_points]
salt.loader=
  saltext.proxmox = saltext.proxmox


[options.extras_require]
tests =
  mock>=3.0.5
  pytest>=7.2.0
  pytest-salt-factories>=1.0.0rc21
  Jinja2
dev =
  nox==2022.1.7
  pre-commit==2.13.0
  pylint<2.14.0
  SaltPyLint
docs =
  sphinx>=3.5.1
  Jinja2
  furo
  sphinx-copybutton
  sphinx-prompt
  sphinxcontrib-spelling
  importlib_metadata<=4.13.0
docsauto =
  sphinx-autobuild
release =
  twine
  wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx
